--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 	<header>
 		<div class="wrapper">
 			<nav>
-				<div class="div1"><span class="logo"></span>
-				</div>
+				<div class="div1"></div>
 				<div class="div2" >
 					<a href="#">Why Alivio</a>
 					<a href="#">Solution</a>
@@ -27,21 +26,22 @@
 			</nav>
 	</div>
 		<div class="header-main">
-			<div class="wrapper">				
+			<div class="wrapper">
 			<div class="text">
 				<p class="p1">Be aware, <br />Manage well.</p>
 				<p class="p2"> Everyone experiences <b></b>stress in different ways. <br> Let Alivio guide you, in a personalized journal <br> experience, to overcome your stress.</p>				
 			<div class="button-hm">	
 					<a href="#"><span>Find Your Way</span></a>		
+			</div>	
 			</div>		
-		</div>
+	
+	
 	</div>
 	</div>
 </header>
 	<main>
 		<section class="First-screen">
 		<div class="wrapper">
-			
 		  <nav class="navFirstS1">
 			<div class="divFirstS1">
 				<p>How it works</p>
@@ -106,8 +106,7 @@
 					</div>
 					<div class="div2">
 						<p class="p3">Our product</p>
-						<h3>You tell us your stress, <br>
-							We make your diary</h3>	
+						<p class="p5">You tell us your stress,<br>We make your diary</p>	
 							<p class="p4">Everyone experiences it, and in different ways. <br>
 Let Alivio guide you, in a personalized journal experience, to <br>over come your stress.</p>	
       <a href="#"><span class="buttonFindYour">Find your way</span></a>		
