--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
 			<div class="wrapper">
 			<div class="text">
 				<p class="p1">Be aware, <br />Manage well.</p>
-				<p class="p2"> Everyone experiences <b></b>stress in different ways. <br> Let Alivio guide you, in a personalized journal <br> experience, to overcome your stress.</p>				
-			<div class="button-hm">	
-					<a href="#"><span>Find Your Way</span></a>		
-			</div>	
+				<p class="p2"> Everyone experiences <b></b>stress in different ways. <br> Let Alivio guide you, in a personalized journal <br> experience, to overcome your stress.</p>	
+				 <a href="#"><span class="buttonFindYour">Find your way</span></a>						
 			</div>		
 	
 	
@@ -70,7 +68,7 @@
 		<div class="div1">Alivio!</div>
 		<p>Now you are aware, and have a way to manage and overcome your own stress.
         What are you waiting for? Alivio today!</p>
-        <p><img  class="img3" src="img/mainFS3.png" alt="pillter"></p>
+        <img  class="img3" src="img/mainFS3.png" alt="pillter">
     </div>
 </nav>
 
