--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="maketMyStyles.css">
-	<title>Document</title>
+	<title>Maket Alivio</title>
 </head>
 <body>
 	<header>
