--- a/index.html
+++ b/index.html
@@ -1,147 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="maketMyStyles.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <title>Lebenslauf</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="maketMyStyles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <title>Lebenslauf</title>
 
 </head>
 <body>
 <div class="container">
-  <div class="header">
-    <img src="img/IMG_Foto.png" alt="Maiia Pushkarova">
-    <div class="section">
+    <div class="header">
+        <img src="img/IMG_Foto.png" alt="Maiia Pushkarova">
+        <div class="section-header">
+            <div class="section">
+                <h1> Maiia Pushkarova </h1>
+                <ul>
+                    <li>Geburtsdatum: 28.01.1982</li>
+                    <li>Staatsangehörigkeit: Ukraine (S - Ausweis)</li>
+                    <li>Familienstand: verheiratet,keine Kinder</li>
+                </ul>
+            </div>
+            <div class="icon-section">
+                <div class="section">
+                    <a href="https://www.linkedin.com/in/maiia-pushkarova-b87637207/">
+                        <img src="img/icons8-linkedin.png">
+                        <span class="buttonLink">Maiia Pushkarova</span>
+                    </a>
+                    <a target="_blank" href="https://github.com/yosha28">
+                        <img src="img/icons8-github.png">
+                        <span class="buttonLink">yosha28</span>
+                    </a>
+                </div>
+                <div class="section">
+                    <a target="_blank" href="https://github.com/yosha28">
+                        <img src="img/icon-whatsapp.png">
+                        <span>+4179-520-83-85</span>
+                    </a>
+                    <a target="_blank" href="https://github.com/yosha28">
+                        <img src="img/icon-gmail.png">
+                        <span>maya2882@gmail.com</span>
+                    </a>
+                </div>
 
-      <!--      <div class="info">-->
-      <h1> Maiia Pushkarova </h1>
-      <ul>
-        <li>Geburtsdatum: 28.01.1982</li>
-        <li>Staatsangehörigkeit: Ukraine (S - Ausweis)</li>
-        <li></li>
-        <li>Familienstand: verheiratet,keine Kinder</li>
-
-        <li></li>
-        <li></li>
-      </ul>
-
-    </div>
-  </div>
-  <div class="content">
-    <div class="column1">
-      <div class="section">
-        <div class="icon-section">
-          <a href="https://www.linkedin.com/in/maiia-pushkarova-b87637207/">
-            <img src="img/icons8-linkedin.png">
-            <span class="buttonLink">Linkedin</span>
-          </a>
-          <a target="_blank" href="https://github.com/yosha28">
-            <img src="img/icons8-github.png">
-          </a>
-          <a target="_blank" href="https://github.com/yosha28">
-            <img src="img/icon-whatsapp.png">
-          </a>
-          <a target="_blank" href="https://github.com/yosha28">
-            <img src="img/icon-gmail.png">
-          </a>
-          <a target="_blank" href="https://github.com/yosha28">
-            <img src="img/icon-telegram.png">
-          </a>
+            </div>
         </div>
-      </div>
-      <div class="section">
-        <h2>Kenntnisse und Fähigkeiten</h2>
-        <h3>Sprachekenntnisse</h3>
-        <ul>
-          <li>Russisch - Muttersprache</li>
-          <li>Ukrainisch - Fliessend</li>
-          <li>Englisch - Grundkenntnisse</li>
-          <li>Deutsch - B1</li>
-        </ul>
-        <h3>Programmierkenntnisse</h3>
-        <ul>
-          <li>Java Spring Boot, Thymeleaf,</li>
-          <li>C#</li>
-          <li>HTML</li>
-        </ul>
-      </div>
-
     </div>
-    <div class="column2">
-      <div class="section">
-        <h2>Berufserfahrung</h2>
-        <dl>
-          <dt>
-            11/2017-02/2022
-          </dt>
-          <dd>eigenes Geschäft selbstständig</dd>
-          <dt>07/2015-10/2017</dt>
-          <dd>"Royal Canin" Verkaufsleiterin
-          </dd>
-          <dt>10/2008-10/2014
-          </dt>
-          <dd> Einzelhandel mit Tiefkühlkost Aussendienstmitarbeiter
-          </dd>
-          <dt>09/2006-09/2008
-          </dt>
-          <dd>Einzelhandel mit Tiefkühlkost PC-Operator</dd>
-          <dt>10/2000-05/2006
-          </dt>
-          <dd>Casino Donetsk Croupierin</dd>
-        </dl>
-      </div>
-      <div class="section">
-        <h2>Bildungsweg</h2>
-        <dl>
-          <dt>11/2018 - 05/2022
-          </dt>
-          <dd> Computerakademie "ItStep" Ukraine Full-Stack-Entwickler</dd>
-          <dt>09/2000 - 06/2006
-          </dt>
-          <dd>Nationale Universität Donetsk Ukraine
-            Studiengang Mathematik
-            Mathematik- und Informatiklehrerin</dd>
-          <dt>09/1996 - 07/1999</dt>
-          <dd>Gymnasium , Donetsk Ukraine</dd>
-          <dt>09/1989 - 06/1996</dt>
-          <dd>Gemeinschaftsschule, Donetsk Ukraine</dd>
-        </dl>
-      </div>
+    <div class="content">
+        <div class="column1">
+            <!--      <div class="section">-->
+            <!--        <div class="icon-section">-->
+            <!--          <a href="https://www.linkedin.com/in/maiia-pushkarova-b87637207/">-->
+            <!--            <img src="img/icons8-linkedin.png">-->
+            <!--            <span class="buttonLink">Linkedin</span>-->
+            <!--          </a>-->
+            <!--          <a target="_blank" href="https://github.com/yosha28">-->
+            <!--            <img src="img/icons8-github.png">-->
+            <!--          </a>-->
+            <!--          <a target="_blank" href="https://github.com/yosha28">-->
+            <!--            <img src="img/icon-whatsapp.png">-->
+            <!--          </a>-->
+            <!--          <a target="_blank" href="https://github.com/yosha28">-->
+            <!--            <img src="img/icon-gmail.png">-->
+            <!--          </a>-->
+            <!--          <a target="_blank" href="https://github.com/yosha28">-->
+            <!--            <img src="img/icon-telegram.png">-->
+            <!--          </a>-->
+            <!--        </div>-->
+            <!--      </div>-->
+            <div class="section">
+                <h2>Kenntnisse und Fähigkeiten</h2>
+                <h3>Sprachekenntnisse</h3>
+                <ul>
+                    <li>Russisch - Muttersprache</li>
+                    <li>Ukrainisch - Fliessend</li>
+                    <li>Englisch - Grundkenntnisse</li>
+                    <li>Deutsch - B1</li>
+                </ul>
+                <h3>Programmierkenntnisse</h3>
+                <ul>
+                    <li>Java Spring Boot, Thymeleaf,</li>
+                    <li>C#</li>
+                    <li>HTML</li>
+                </ul>
+                <h3>Starkkgh;flgkjg;lhlkj</h3>
+                <li>Java dgdfgfzdfhfdbSpring Boot, Thymeleaf,</li>
+                <li>Cfgfdfhdgh#</li>
+                <li>HTfhgstrdfgfgML</li>
+            </div>
 
+        </div>
+        <div class="column2">
+            <div class="section">
+                <h2>Berufserfahrung</h2>
+                <dl>
+                    <dt>
+                        11/2017-02/2022
+                    </dt>
+                    <dd>eigenes Geschäft selbstständig</dd>
+                    <dt>07/2015-10/2017</dt>
+                    <dd>"Royal Canin" Verkaufsleiterin
+                    </dd>
+                    <dt>10/2008-10/2014
+                    </dt>
+                    <dd> Einzelhandel mit Tiefkühlkost Aussendienstmitarbeiter
+                    </dd>
+                    <dt>09/2006-09/2008
+                    </dt>
+                    <dd>Einzelhandel mit Tiefkühlkost PC-Operator</dd>
+                    <dt>10/2000-05/2006
+                    </dt>
+                    <dd>Casino Donetsk Croupierin</dd>
+                </dl>
+            </div>
+            <div class="section">
+                <h2>Bildungsweg</h2>
+                <dl>
+                    <dt>11/2018 - 05/2022
+                    </dt>
+                    <dd> Computerakademie "ItStep" Ukraine Full-Stack-Entwickler</dd>
+                    <dt>09/2000 - 06/2006
+                    </dt>
+                    <dd>Nationale Universität Donetsk Ukraine
+                        Studiengang Mathematik
+                        Mathematik- und Informatiklehrerin
+                    </dd>
+                    <dt>09/1996 - 07/1999</dt>
+                    <dd>Gymnasium , Donetsk Ukraine</dd>
+                    <dt>09/1989 - 06/1996</dt>
+                    <dd>Gemeinschaftsschule, Donetsk Ukraine</dd>
+                </dl>
+            </div>
+
+        </div>
     </div>
-  </div>
-  <!--  <div class="footer">-->
-  <!--   -->
-  <!--    <div class="section">-->
-  <!--      <a href="https://www.linkedin.com/in/maiia-pushkarova-b87637207/">-->
-  <!--        <img src="img/icons8-linkedin.png">-->
-  <!--        <span class="buttonLink">Linkedin</span>-->
-  <!--      </a>-->
-  <!--      <a target="_blank" href="https://github.com/yosha28">-->
-  <!--        <img src="img/icons8-github.png">-->
-  <!--      </a>-->
-  <!--      <a target="_blank" href="https://github.com/yosha28">-->
-  <!--        <img src="img/icon-whatsapp.png">-->
-  <!--      </a>-->
-  <!--      <a target="_blank" href="https://github.com/yosha28">-->
-  <!--        <img src="img/icon-gmail.png">-->
-  <!--      </a>-->
-  <!--      <a target="_blank" href="https://github.com/yosha28">-->
-  <!--        <img src="img/icon-telegram.png">-->
-  <!--      </a>-->
-  <!--    </div>-->
+    <!--  <div class="footer">-->
+    <!--   -->
+    <!--    <div class="section">-->
+    <!--      <a href="https://www.linkedin.com/in/maiia-pushkarova-b87637207/">-->
+    <!--        <img src="img/icons8-linkedin.png">-->
+    <!--        <span class="buttonLink">Linkedin</span>-->
+    <!--      </a>-->
+    <!--      <a target="_blank" href="https://github.com/yosha28">-->
+    <!--        <img src="img/icons8-github.png">-->
+    <!--      </a>-->
+    <!--      <a target="_blank" href="https://github.com/yosha28">-->
+    <!--        <img src="img/icon-whatsapp.png">-->
+    <!--      </a>-->
+    <!--      <a target="_blank" href="https://github.com/yosha28">-->
+    <!--        <img src="img/icon-gmail.png">-->
+    <!--      </a>-->
+    <!--      <a target="_blank" href="https://github.com/yosha28">-->
+    <!--        <img src="img/icon-telegram.png">-->
+    <!--      </a>-->
+    <!--    </div>-->
 
-  <!--  </div>-->
+    <!--  </div>-->
 </div>
 <script>
-  window.onload = function () {
-    window.setTimeout(function () {
-      document.body.classList.add('loaded');
-    }, 4000);
-  };
+    window.onload = function () {
+        window.setTimeout(function () {
+            document.body.classList.add('loaded');
+        }, 4000);
+    };
 
 
 </script>
