--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                     <dt>
                         11/2017-02/2022
                     </dt>
-                    <dd>eigenes Geschäft selbstständig</dd>
+                    <dd>Eigenes Geschäft selbstständig
+                        Verkaufsleiterin  </dd>
                     <dt>07/2015-10/2017</dt>
                     <dd>"Royal Canin" Verkaufsleiterin
                     </dd>
