--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+<div class="fon">
 <div class="container">
     <div class="header">
         <img src="img/IMG_Foto.png" alt="Maiia Pushkarova">
@@ -50,26 +51,6 @@
     </div>
     <div class="content">
         <div class="column1">
-            <!--      <div class="section">-->
-            <!--        <div class="icon-section">-->
-            <!--          <a href="https://www.linkedin.com/in/maiia-pushkarova-b87637207/">-->
-            <!--            <img src="img/icons8-linkedin.png">-->
-            <!--            <span class="buttonLink">Linkedin</span>-->
-            <!--          </a>-->
-            <!--          <a target="_blank" href="https://github.com/yosha28">-->
-            <!--            <img src="img/icons8-github.png">-->
-            <!--          </a>-->
-            <!--          <a target="_blank" href="https://github.com/yosha28">-->
-            <!--            <img src="img/icon-whatsapp.png">-->
-            <!--          </a>-->
-            <!--          <a target="_blank" href="https://github.com/yosha28">-->
-            <!--            <img src="img/icon-gmail.png">-->
-            <!--          </a>-->
-            <!--          <a target="_blank" href="https://github.com/yosha28">-->
-            <!--            <img src="img/icon-telegram.png">-->
-            <!--          </a>-->
-            <!--        </div>-->
-            <!--      </div>-->
             <div class="section">
                 <h2>Kenntnisse und Fähigkeiten</h2>
                 <h3>Sprachekenntnisse</h3>
@@ -79,16 +60,25 @@
                     <li>Englisch - Grundkenntnisse</li>
                     <li>Deutsch - B1</li>
                 </ul>
-                <h3>Programmierkenntnisse</h3>
+                <h3>Fertigkeiten</h3>
                 <ul>
                     <li>Java Spring Boot, Thymeleaf,</li>
                     <li>C#</li>
                     <li>HTML</li>
+                    <li>SQL</li>
+                    <li>Objektorientiert</li>
+                    <li>REST-APIs</li>
+                    <li>Hibernate ORM</li>
+                    <li></li>
+                    <li></li>
+                    <li></li> <li></li>
+
+
                 </ul>
-                <h3>Starkkgh;flgkjg;lhlkj</h3>
-                <li>Java dgdfgfzdfhfdbSpring Boot, Thymeleaf,</li>
-                <li>Cfgfdfhdgh#</li>
-                <li>HTfhgstrdfgfgML</li>
+                <h3></h3>
+                <li></li>
+                <li></li>
+                <li></li>
             </div>
 
         </div>
@@ -99,14 +89,16 @@
                     <dt>
                         11/2017-02/2022
                     </dt>
-                    <dd>Eigenes Geschäft selbstständig
-                        Verkaufsleiterin  </dd>
+                    <dd>Eigenes Geschäft selbstständig</dd>
+                       <dd> Verkaufsleiterin  </dd>
                     <dt>07/2015-10/2017</dt>
-                    <dd>"Royal Canin" Verkaufsleiterin
+                    <dd>"Royal Canin"</dd>
+                    <dd>  Verkaufsleiterin
                     </dd>
                     <dt>10/2008-10/2014
                     </dt>
-                    <dd> Einzelhandel mit Tiefkühlkost Aussendienstmitarbeiter
+                    <dd> Einzelhandel mit Tiefkühlkost</dd>
+                    <dd> Aussendienstmitarbeiter
                     </dd>
                     <dt>09/2006-09/2008
                     </dt>
@@ -121,44 +113,25 @@
                 <dl>
                     <dt>11/2018 - 05/2022
                     </dt>
-                    <dd> Computerakademie "ItStep" Ukraine Full-Stack-Entwickler</dd>
+                    <dd> Computerakademie "ItStep" Ukraine</dd>
+                    <dd>  Full-Stack-Entwickler</dd>
                     <dt>09/2000 - 06/2006
                     </dt>
-                    <dd>Nationale Universität Donetsk Ukraine
-                        Studiengang Mathematik
-                        Mathematik- und Informatiklehrerin
+                    <dd>Nationale Universität Donetsk Ukraine </dd>
+                      <dd>Studiengang Mathematik </dd>
+                       <dd> Mathematik- und Informatiklehrerin
                     </dd>
-                    <dt>09/1996 - 07/1999</dt>
-                    <dd>Gymnasium , Donetsk Ukraine</dd>
-                    <dt>09/1989 - 06/1996</dt>
-                    <dd>Gemeinschaftsschule, Donetsk Ukraine</dd>
+                    <dt>09/1997 - 07/1999</dt>
+                    <dd>Oberschule , Donetsk Ukraine</dd>
+                    <dt>09/1989 - 06/1997</dt>
+                    <dd>Basisschule, Donetsk Ukraine</dd>
                 </dl>
             </div>
 
         </div>
     </div>
-    <!--  <div class="footer">-->
-    <!--   -->
-    <!--    <div class="section">-->
-    <!--      <a href="https://www.linkedin.com/in/maiia-pushkarova-b87637207/">-->
-    <!--        <img src="img/icons8-linkedin.png">-->
-    <!--        <span class="buttonLink">Linkedin</span>-->
-    <!--      </a>-->
-    <!--      <a target="_blank" href="https://github.com/yosha28">-->
-    <!--        <img src="img/icons8-github.png">-->
-    <!--      </a>-->
-    <!--      <a target="_blank" href="https://github.com/yosha28">-->
-    <!--        <img src="img/icon-whatsapp.png">-->
-    <!--      </a>-->
-    <!--      <a target="_blank" href="https://github.com/yosha28">-->
-    <!--        <img src="img/icon-gmail.png">-->
-    <!--      </a>-->
-    <!--      <a target="_blank" href="https://github.com/yosha28">-->
-    <!--        <img src="img/icon-telegram.png">-->
-    <!--      </a>-->
-    <!--    </div>-->
 
-    <!--  </div>-->
+</div>
 </div>
 <script>
     window.onload = function () {
