--- a/index.html
+++ b/index.html
@@ -11,13 +11,45 @@
 
 </head>
 <body>
-<div class="fon">
-<div class="container">
-    <div class="header">
-        <img src="img/IMG_Foto.png" alt="Maiia Pushkarova">
-        <div class="section-header">
+<div class="wrapper">
+    <div class="block">
+        <div class="block1">
+            <div class="block11">
+                <div class="titName">
+                <h1>MAIIA PUSHKAROVA</h1>
+                <h1>Entwickler</h1>
+                </div>
+            </div>
+            <div class="block12">
+                <div class="tit1">
+                    <div class="section">
+                    <h2>KONTAKT</h2>
+                    <ul>
+                        <li>222</li>
+                        <li>dd</li>
+                        <li>dd</li>
+                    </ul>
+                    </div>
+                </div>
+                <div class="tit2">
+                    <div class="section">
+                        <h1>BEWERBUNG</h1>
+                        <h3>als Jobtitel bei der Firma GOOGLE</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="block13">
+            <img src="img/Profilbild.png" alt="Maiia Pushkarova">
+        </div>
+    </div>
+    <div class="block">
+        <!--    <div class="content">-->
+        <div class="column1">
             <div class="section">
-                <h1> Maiia Pushkarova </h1>
+                <img src="img/Profilbild.png" alt="Maiia Pushkarova">
+                <h2>PERSÖNLICHES</h2>
                 <ul>
                     <li>Geburtsdatum: 28.01.1982</li>
                     <li>Staatsangehörigkeit: Ukraine (S - Ausweis)</li>
@@ -34,8 +66,6 @@
                         <img src="img/icons8-github.png">
                         <span class="buttonLink">yosha28</span>
                     </a>
-                </div>
-                <div class="section">
                     <a target="_blank" href="https://github.com/yosha28">
                         <img src="img/icon-whatsapp.png">
                         <span>+4179-520-83-85</span>
@@ -45,14 +75,9 @@
                         <span>maya2882@gmail.com</span>
                     </a>
                 </div>
-
             </div>
-        </div>
-    </div>
-    <div class="content">
-        <div class="column1">
             <div class="section">
-                <h2>Kenntnisse und Fähigkeiten</h2>
+                <h2>KENNTNISSE</h2>
                 <h3>Sprachekenntnisse</h3>
                 <ul>
                     <li>Russisch - Muttersprache</li>
@@ -71,29 +96,27 @@
                     <li>Hibernate ORM</li>
                     <li></li>
                     <li></li>
-                    <li></li> <li></li>
+                    <li></li>
+                    <li></li>
 
 
                 </ul>
-                <h3></h3>
-                <li></li>
-                <li></li>
-                <li></li>
-            </div>
 
+            </div>
         </div>
         <div class="column2">
             <div class="section">
-                <h2>Berufserfahrung</h2>
+                <h1> MAIIA PUSHKAROVA </h1>
+                <h2>BERUFSERFARUNG</h2>
                 <dl>
                     <dt>
                         11/2017-02/2022
                     </dt>
                     <dd>Eigenes Geschäft selbstständig</dd>
-                       <dd> Verkaufsleiterin  </dd>
+                    <dd> Verkaufsleiterin</dd>
                     <dt>07/2015-10/2017</dt>
                     <dd>"Royal Canin"</dd>
-                    <dd>  Verkaufsleiterin
+                    <dd> Verkaufsleiterin
                     </dd>
                     <dt>10/2008-10/2014
                     </dt>
@@ -109,17 +132,17 @@
                 </dl>
             </div>
             <div class="section">
-                <h2>Bildungsweg</h2>
+                <h2>BILDUNGSWEG</h2>
                 <dl>
                     <dt>11/2018 - 05/2022
                     </dt>
                     <dd> Computerakademie "ItStep" Ukraine</dd>
-                    <dd>  Full-Stack-Entwickler</dd>
+                    <dd> Full-Stack-Entwickler</dd>
                     <dt>09/2000 - 06/2006
                     </dt>
-                    <dd>Nationale Universität Donetsk Ukraine </dd>
-                      <dd>Studiengang Mathematik </dd>
-                       <dd> Mathematik- und Informatiklehrerin
+                    <dd>Nationale Universität Donetsk Ukraine</dd>
+                    <dd>Studiengang Mathematik</dd>
+                    <dd> Mathematik- und Informatiklehrerin
                     </dd>
                     <dt>09/1997 - 07/1999</dt>
                     <dd>Oberschule , Donetsk Ukraine</dd>
@@ -129,10 +152,22 @@
             </div>
 
         </div>
+
+    </div>
+    <div class="block">
+        <div class="column1">
+            <div class="section">
+            <h3>Hobbys</h3>
+            <li></li>
+            <li></li>
+            <li></li>
+        </div>
+        </div>
+        <div class="column2"></div>
     </div>
 
 </div>
-</div>
+<!--</div>-->
 <script>
     window.onload = function () {
         window.setTimeout(function () {
