--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
                     <div class="section">
                     <h2>KONTAKT</h2>
                     <ul>
-                        <li>222</li>
-                        <li>dd</li>
-                        <li>dd</li>
+                        <li>Birkenweg 1</li>
+                        <li>6142 Gettnau</li>
+                        <li>+41 79 520 83 85</li>
+                        <li>maya2882@gmail.com</li>
                     </ul>
                     </div>
                 </div>
@@ -51,9 +52,12 @@
                 <img src="img/Profilbild.png" alt="Maiia Pushkarova">
                 <h2>PERSÖNLICHES</h2>
                 <ul>
-                    <li>Geburtsdatum: 28.01.1982</li>
-                    <li>Staatsangehörigkeit: Ukraine (S - Ausweis)</li>
-                    <li>Familienstand: verheiratet,keine Kinder</li>
+                    <h3>Geburtsdatum- / Ort</h3>
+                    <li>28. Januare 1982 / Donetsk</li>
+                    <h3>Staatsangehörigkeit</h3>
+                    <li>Ukraine (S - Ausweis)</li>
+                    <h3>Familienstand</h3>
+                    <li>verheiratet, keine Kinder</li>
                 </ul>
             </div>
             <div class="icon-section">
@@ -70,23 +74,25 @@
                         <img src="img/icon-whatsapp.png">
                         <span>+4179-520-83-85</span>
                     </a>
-                    <a target="_blank" href="https://github.com/yosha28">
-                        <img src="img/icon-gmail.png">
-                        <span>maya2882@gmail.com</span>
-                    </a>
+<!--                    <a target="_blank" href="https://github.com/yosha28">-->
+<!--                        <img src="img/icon-gmail.png">-->
+<!--                        <span>maya2882@gmail.com</span>-->
+<!--                    </a>-->
                 </div>
             </div>
             <div class="section">
                 <h2>KENNTNISSE</h2>
-                <h3>Sprachekenntnisse</h3>
+
                 <ul>
+                    <h3>Sprachekenntnisse</h3>
                     <li>Russisch - Muttersprache</li>
                     <li>Ukrainisch - Fliessend</li>
                     <li>Englisch - Grundkenntnisse</li>
                     <li>Deutsch - B1</li>
                 </ul>
-                <h3>Fertigkeiten</h3>
-                <ul>
+
+                <ul >
+                    <h3>Fertigkeiten</h3>
                     <li>Java Spring Boot, Thymeleaf,</li>
                     <li>C#</li>
                     <li>HTML</li>
